--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/dark-colored-favico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gaio Admin</title>
+    <title>Seller Console</title>
   </head>
   <body>
     <div id="root"></div>
